# iskra

./: .gitignore  LICENSE  README.md  iskra.sql  pyproject.toml  sml_example.txt
iskra/: log_postgresql.py
